# aeon-protocol

./: .gitignore  README.md  requirements.txt  vercel.json
apps/web/: Dockerfile  middleware.ts  package-lock.json  (+3 more)
deployment/: DEPLOYMENT_GUIDE.md  Dockerfile.api  Dockerfile.worker  PRODUCTION_CHECKLIST.md  docker-compose.production.yml  droplet-setup.sh  entrypoint-api.sh  entrypoint-worker.sh  nginx.conf  security-audit.sh  test-deployment.sh
docs/: Aeon exec summary 1 for all  Aeon exec summary 4 media  Aeon protocol  fine tuning models  replicate doc.md  run a model node
infra/: docker-compose.dev.yml
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_migration.py
services/api/app/: audio_providers.py  auth.py  celery_client.py  config.py  database.py  main.py  middleware.py  models.py  s3_client.py  schemas.py  seed.py  video_providers.py
services/api/app/agents/: base_agent.py  business_agents.py  content_agents.py  orchestration.py
services/api/app/ai_coder/: code_generator.py
services/api/app/database/: __init__.py  neon_db.py
services/api/app/integrations/: __init__.py  crm_connectors.py  crm_integrations.py  ecommerce_integrations.py
services/api/app/media_providers/: __init__.py  image_providers.py
services/api/app/routers/: __init__.py  agents.py  ai_coder.py  integrations.py  media.py  webhooks.py  workflows.py
services/api/app/workflow_engine/: execution_engine.py
services/worker/: Dockerfile  pyproject.toml  video_stitching_worker.py  worker.py
(+24 files in other folders)
