[tool.poetry]
name = "aeon-api"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.6"}
python-multipart = "0.0.9"
psycopg2-binary = "2.9.9"
sqlalchemy = "2.0.32"
asyncpg = "0.29.0"
redis = "5.0.7"
celery = "5.4.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
pydantic = "2.8.2"
pydantic-settings = "2.4.0"
boto3 = "1.34.148"
replicate = "0.32.0"
alembic = "1.13.2"
PyJWT = "2.8.0"
cryptography = "41.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
httpx = "0.27.2"
ruff = "0.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

