[tool.poetry]
name = "aeon-worker"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
celery = "5.4.0"
redis = "5.0.7"
replicate = "0.32.0"
boto3 = "1.34.148"
python-dotenv = "1.0.1"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
ruff = "0.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

